--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 
 // Set custom colors
-$teal: #012391 !default;
+$teal: #1938A0 !default;
 $dark-blue: #2c3e50 !default;
 
 // Override Bootstrap primary and secondary colors
