--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -2257,7 +2257,7 @@ fieldset:disabled a.btn {
 .btn-primary {
   color: #fff;
   background-color: #1938A0;
-  border-color: ;
+  border-color: #1938A0;
 }
 
 .btn-primary:hover {
@@ -9753,7 +9753,7 @@ a.text-dark:hover, a.text-dark:focus {
   left: 0;
   transition: all 0.2s ease-in-out;
   opacity: 0;
-  background-color: rgba(26, 188, 156, 0.9);
+  background-color: rgba(25, 56, 160, 0.9);
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
