--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -4321,9 +4321,9 @@ input[type="button"].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color:transparent;
   background-clip: border-box;
-  border: 0.125rem solid rgba(0, 0, 0, 0.125);
+  border: 0.125rem solid transparent;
   border-radius: 0.5rem;
 }
 
@@ -4371,8 +4371,8 @@ input[type="button"].btn-block {
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 0.125rem solid rgba(0, 0, 0, 0.125);
+  background-color: transparent;
+  border-bottom: 0.125rem solid rgba(0, 0, 0,);
 }
 
 .card-header:first-child {
